<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerifyPinActivity">

    <!-- Header -->

    <ImageButton
        android:id="@+id/ib_back"
        android:src="@drawable/ic_back"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="?attr/colorPrimary"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_app_name"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:src="@drawable/ic_main"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:tint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_header_title"
        android:text="@string/tv_verify_title_security"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/v_line"
        android:background="#ccc"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Intro -->
    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_verify_description_security"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toBottomOf="@id/v_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo de ingreso PIN/Pass -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="25dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tvIntro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPinOrPass"
            android:inputType="numberPassword"
            android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón ingresar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_verify"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:tint="?attr/colorPrimary"
        android:layout_marginHorizontal="25dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        android:text="@string/mb_verify"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tilPin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>