<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activities.ScheduleActivity">

    <ImageButton
        android:id="@+id/ib_back"
        android:src="@drawable/ic_back"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="?attr/colorPrimary"/>

    <ImageView
        android:src="@drawable/ic_schedule"
        android:padding="15sp"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:tint="?attr/colorPrimary" />

    <TextView
        android:text="@string/tv_schedule_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="#ccc"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/tv_schedule_days"
        android:text="@string/tv_schedule_days"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingTop="15dp"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.chip.ChipGroup
        android:paddingHorizontal="20dp"
        android:paddingTop="25dp"
        app:chipSpacingHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAllDays"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Days"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMonday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monday"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTuesday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuesday"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWednesday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThursday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thursday"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFriday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Friday"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSaturday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saturday"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSunday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sunday"
            android:checked="false"/>


    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_schedule_hours"
        android:text="@string/tv_schedule_hours"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingTop="50dp"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tv_allDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/s_all_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:id="@+id/v_split"
        android:background="#ccc"
        android:layout_marginHorizontal="23dp"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:paddingHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_from"
                android:text="From"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_schedule_hour_from"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="-- : --"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_to"
                android:text="To"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_schedule_hour_to"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="-- : --"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_save"
        android:text="@string/mb_save"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"/>

</LinearLayout>